# py-eos

./: .pre-commit-config.yaml  README.md  pyproject.toml
eos/: __init__.py  base.py  cues.py  eos.py  groups.py  helpers.py  iterator.py  macros.py  refdata.py  system.py  types.py
examples/: create_cue_skeleton.py  group_generator.py  ideas  ingest_cue_list.py  ingest_cue_list_new.py  pull_cue_timing.py  retime.py  spotsheet.py  test.py
py_eos/: __init__.py  eos.py  eos_types.py  test.py
test/: conftest.py  test_cues.py  test_groups.py
tests/: conftest.py  test_cues.py  test_groups.py
