[project]
name = "py-eos"
version = "0.1.0"
description = "Wrapper for comminicating with ETC's Eos family over OSC"
authors = [{name="Reid Sox-Harris", email="reid@soxharris.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["python-osc (>=1.9.3,<2.0)"]

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
pylint = "^3.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
