[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[project]
name = "py-eos"
version = "0.1.0"
description = "Wrapper for comminicating with ETC's Eos family over OSC"
authors = [{name="Reid Sox-Harris", email="reid@soxharris.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["python-osc (>=1.9.3,<2.0)", "path (>=17.1.0,<18.0.0)", "strictyaml (>=1.7.3,<2.0.0)"]

[project.optional-dependencies]
examples = ["pandas (>=2.3.2,<3.0.0)", "openpyxl (>=3.1.5,<4.0.0)"]

[dependency-groups]
dev = [
  "pyright>=1.1.408",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
lint.select = [ "ALL" ]
lint.ignore = [
  "COM812",  # Trailing commas added by formatter
  "D203",    # No blank line before class (D211 preferred by Google)
  "D213",    # No summary line on second line (D212 preferred by Google)
  "EM101",   # Exception must not use a string literal, assign to variable first
  "EM102",   # Exception must not use an f-string literal, assign to variable first
  "FIX002",  # Using TODOs as context for future work
  "PLR2004", # Magic value used in comparison
  "TRY003",  # Avoid specifying long messages outside the exception class
  # 'G004',    # Logging statement uses f-string
  #     'PD901',   # Avoid using the generic variable name `df` for DataFrames
  # 'D100',    # Missing docstring in public module
  #     'D104',    # Missing docstring in public package
  #     'D107',    # Missing docstring in `__init__`
  #     'D400',    # First line should end with a period'
  #     'D401',    # First line of docstring should be in imperative mood'
]
lint.per-file-ignores."tests/*.py" = [
  "ANN",     # Typechecking
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D106",    # Missing docstring in public nested class
  "PLR0913", # Too many arguments in function definition
  "PLR0915", # Too many statements
  "PLR2004", # Magic values
  "PT011",   # pytest.raises too broad
  "S101",    # Use of `assert` detected
  "SLF001",  # Private member accessed
]

lint.pep8-naming.extend-ignore-names = ["_update*", "_unhandled*"]

[tool.pylint]
main.ignore = [ ".venv" ]

[tool.codespell]
skip = "*.xml"

[tool.pyright]
typeCheckingMode = "standard"  # Someday we'll make it strict
venvPath = "."
venv = ".venv"

[tool.pytest]
# check_untyped_defs = true
# disallow_any_generics = true
# disallow_incomplete_defs = true
# no_implicit_optional = true
# no_implicit_reexport = true
# strict_equality = true
# warn_redundant_casts = true
# warn_unused_ignores = true
ini_options.addopts = "--maxfail=1"
